frontend/src/css/NavBar.css
.navbar {
    position: fixed;
    top: 20px;
    left: 0;
    right: 0;

    display: flex;
    justify-content: center;
    align-items: center;

    z-index: 1000;
}

/* логотип */
.logo {
    position: absolute;
    left: 40px;
    top: 10px;

    font-size: 20px;
    color: white;

    transition: 0.3s;
}

.logo:hover {
    opacity: 0.7;
}

/* ===== МЕНЮ (КАПСУЛА) ===== */

.menu {
    display: flex;
    gap: 40px;
    padding: 15px 40px;

    border-radius: 40px;

    /*background: rgba(255,255,255,0.15);*/
    backdrop-filter: blur(12px);

    /*border: 1px solid rgba(255,255,255,0.3);*/
    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
}

.menu-main {
    background: rgba(255,255,255,0.2);
    border: 1px solid rgba(255,255,255,0.3);
    color: white;
}

.menu-default {
    background: rgba(159, 161, 164, 0.7);
    border: 1px solid rgba(0,0,0,0.1);
    color: black;
}

.menu.scrolled {
    background: rgba(159, 161, 164, 0.5);
    backdrop-filter: blur(10px);
}

/* посилання */
.menu a {
    text-decoration: none;
    color: white;
    font-size: 16px;
}

.menu p {
    margin: 0;
}

.menu a:hover {
    opacity: 0.7;
}

.hamburger {
    display: none;
    position: absolute;
    right: 20px;
    top: 10px;
    cursor: pointer;
}

@media (max-width: 768px) {

    .menu {
        position: absolute;
        top: 70px;
        left: 20px;
        right: 20px;

        flex-direction: column;
        display: none;

        background: rgba(0,0,0,0.9);
        padding: 20px;
        border-radius: 20px;
    }

    .menu.open {
        display: flex;
    }

    .hamburger {
        display: block;
    }

    .logo {
        left: 20px;
    }
}

.btn {
    display: none; /* щоб не ламала дизайн */
}

